--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,11 @@ jobs:
             name: Linux x86-64 (glibc)
             image: debian/bookworm
             arch: amd64
-          - os: ubuntu-24.04
+          - os: ubuntu-24.04 (musl)
+            name: Linux aarch64
+            image: alpine
+            arch: arm64
+          - os: ubuntu-24.04 (glibc)
             name: Linux aarch64
             image: debian/bookworm
             arch: arm64
