--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -114,6 +114,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ needs.determine-tag.outputs.release-tag }}
+      - name: Ensure aarch64 Python for Windows ARM
+        if: matrix.os == 'windows-11-arm'
+        run: |
+          # N.B.: uv still defaults to x86_64 / Prism emulation; so we have to force aarch64 here.
+          UV_PYTHON_VERSION="cpython-$(cat .python-version)-windows-aarch64"
+          "${UV}" python install ${UV_PYTHON_VERSION}
+          echo UV_PYTHON="${UV_PYTHON_VERSION}" >> ${GITHUB_ENV}
       - name: Package science ${{ needs.determine-tag.outputs.release-tag }} binary
         if: matrix.image == ''
         run: |
