--- a/scripts/docker/debian/trixie/Dockerfile
+++ b/scripts/docker/debian/trixie/Dockerfile
@@ -4,10 +4,8 @@ ARG UID
 ARG GID
 
 RUN apt update && \
-    apt install -y curl gcc python3-dev python3.13-venv python-is-python3 && \
+    apt install -y curl gcc && \
     groupadd --gid ${GID} build && \
     useradd --create-home --gid ${GID} --uid ${UID} build
 
-RUN python -mvenv /venv && \
-    /venv/bin/pip install --root-user-action ignore uv && \
-    ln -s /venv/bin/uv /usr/bin/uv
+RUN curl -LsSf https://astral.sh/uv/install.sh | UV_INSTALL_DIR=/usr/bin sh
