--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,11 @@ jobs:
             name: Linux x86-64 (glibc)
             image: debian/bookworm
             arch: amd64
-          - os: ubuntu-24.04
+          - os: ubuntu-24.04 (musl)
+            name: Linux aarch64
+            image: alpine
+            arch: arm64
+          - os: ubuntu-24.04 (glibc)
             name: Linux aarch64
             image: debian/bookworm
             arch: arm64
@@ -103,15 +107,6 @@ jobs:
           export UV="$(which uv)"
           "${UV}" -V
           echo UV="${UV}" >> ${GITHUB_ENV}
-      - name: Setup x86_64 Python for Prism
-        if: matrix.os == 'windows-11-arm'
-        run: |
-          # N.B.: We use an x86-64 Python for Windows ARM64 because this is what we ship with via
-          # PBS, and we need to be able to resolve x86-64 compatible requirements (which include
-          # native deps like psutil) for our shiv.
-          UV_PYTHON_VERSION=cpython-3.13.7-windows-x86_64-none
-          "${UV}" python install ${UV_PYTHON_VERSION}
-          echo UV_PYTHON_ARGS="--python ${UV_PYTHON_VERSION}" >> ${GITHUB_ENV}
       - name: Installing emulators
         if: matrix.image != ''
         run: docker run --privileged --rm tonistiigi/binfmt --install all
@@ -119,6 +114,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ needs.determine-tag.outputs.release-tag }}
+      - name: Ensure aarch64 Python for Windows ARM
+        if: matrix.os == 'windows-11-arm'
+        run: |
+          # N.B.: uv still defaults to x86_64 / Prism emulation; so we have to force aarch64 here.
+          UV_PYTHON_VERSION="cpython-$(cat .python-version)-windows-aarch64"
+          "${UV}" python install ${UV_PYTHON_VERSION}
+          echo UV_PYTHON="${UV_PYTHON_VERSION}" >> ${GITHUB_ENV}
       - name: Package science ${{ needs.determine-tag.outputs.release-tag }} binary
         if: matrix.image == ''
         run: |
