--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,12 +58,12 @@ jobs:
             name: Linux x86-64 (glibc)
             image: debian/bookworm
             arch: amd64
-          - os: ubuntu-24.04 (musl)
-            name: Linux aarch64
+          - os: ubuntu-24.04
+            name: Linux aarch64 (musl)
             image: alpine
             arch: arm64
-          - os: ubuntu-24.04 (glibc)
-            name: Linux aarch64
+          - os: ubuntu-24.04
+            name: Linux aarch64 (glibc)
             image: debian/bookworm
             arch: arm64
           - os: ubuntu-24.04
